==> aws/amazon-freertos/lib/wifi/portable/ti/cc3220_launchpad/aws_wifi.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "pthread.h"
#include "unistd.h"
#include "network_if.h"
#include "aws_wifi.h"
#include "aws_wifi_config.h"

WIFIReturnCode_t WIFI_On( void )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    if( xWIFIInitDone == pdFALSE )
    {
        /* This buffer is used to store the semaphore's data structure
         * and therefore must be static. */
        static StaticSemaphore_t xSemaphoreBuffer;

        /* Create the semaphore used to serialize WiFi module operations. */
        xWiFiSemaphoreHandle = xSemaphoreCreateBinaryStatic( &( xSemaphoreBuffer ) );

        /* Initialize semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );

        /*Create simple link task. */
        xRetVal = prvCreateSLTask();

        configASSERT( xRetVal == 0 );

        xWIFIInitDone = pdTRUE;
    }

    /*Reset the network processor. */
    xRetVal = prvResetNetworkCPU();

    configASSERT( xRetVal == eWiFiSuccess );

    /* Reset the state of the machine. */
    Network_IF_ResetMCUStateMachine();

    /* Init the wifi driver in station mode.*/
    Network_IF_InitDriver( eWiFiModeStation );

    return xRetVal;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int32_t lRetVal;
    SlWlanSecParams_t xSecurityParams = { 0 };
    char cPcSsid[ wificonfigMAX_SSID_LEN ] = { 0 };

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        /* Reset The state of the machine.*/
        Network_IF_ResetMCUStateMachine();

        /* Disconnect if already connected, stop the sl driver.*/
        Network_IF_DeInitDriver();

        /* Restart the driver in station mode. */
        lRetVal = Network_IF_InitDriver( eWiFiModeStation );

        if( lRetVal < 0 )
        {
            configPRINTF( ( "Failed to start SimpleLink Device\n\r", lRetVal ) );

            xRetVal = eWiFiFailure;
        }
        else
        {
            /* Initialize AP security params. */
            xSecurityParams.Key = ( signed char * ) pxNetworkParams->pcPassword;
            xSecurityParams.KeyLen = pxNetworkParams->ucPasswordLength;
            xSecurityParams.Type = prvConvertSecurityAbstractedToTI( pxNetworkParams->xSecurity );
            memcpy( cPcSsid, pxNetworkParams->pcSSID, pxNetworkParams->ucSSIDLength );

            /* Connect to the Access Point. If the credentials are incorrect this
             * function will ask for an open SSID. */
            lRetVal = Network_IF_ConnectAP( cPcSsid,
                                            xSecurityParams );

            if( lRetVal < 0 )
            {
                configPRINTF( ( "Connection to an AP failed\n\r" ) );

                xRetVal = eWiFiFailure;
            }
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Disconnect( void )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    long lRetVal = -1;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        lRetVal = Network_IF_DisconnectFromAP();

        if( lRetVal == 0 )
        {
            configPRINTF( ( "WiFi Disconnected.\r\n" ) );
        }
        else
        {
            configPRINTF( ( "WiFi already disconnected.\r\n" ) );
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Reset( void )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    long lRetVal;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        /* Reset The state of the machine.*/
        Network_IF_ResetMCUStateMachine();

        /* Disconnect if already connected, stop the sl driver.*/
        Network_IF_DeInitDriver();

        /* Restart the driver in station mode. */
        lRetVal = Network_IF_InitDriver( eWiFiModeStation );

        if( lRetVal < 0 )
        {
            configPRINTF( ( "Failed to start SimpleLink Device\n\r", lRetVal ) );

            xRetVal = eWiFiFailure;
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetIP( uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int16_t sRetCode;

    unsigned long ulDestinationIP = 0;
    unsigned long ulSubMask = 0;
    unsigned long ulDefGateway = 0;
    unsigned long ulDns = 0;

    /* Get IP address. */
    sRetCode = ( int16_t ) Network_IF_IpConfigGet( &ulDestinationIP,
                                                   &ulSubMask,
                                                   &ulDefGateway,
                                                   &ulDns );

    if( sRetCode < 0 )
    {
        xRetVal = eWiFiFailure;
    }
    else
    {
        /*fill the return buffer.*/
        *( pucIPAddr ) = SL_IPV4_BYTE( ulDestinationIP, 3 );
        *( pucIPAddr + 1 ) = SL_IPV4_BYTE( ulDestinationIP, 2 );
        *( pucIPAddr + 2 ) = SL_IPV4_BYTE( ulDestinationIP, 1 );
        *( pucIPAddr + 3 ) = SL_IPV4_BYTE( ulDestinationIP, 0 );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    int16_t sRetCode;
    uint8_t ucMacAddressVal[ wificonfigMAX_BSSID_LEN ];
    uint16_t usMacAddressLen = wificonfigMAX_BSSID_LEN;
    uint16_t usConfigOpt = 0;

    sRetCode = sl_NetCfgGet( SL_NETCFG_MAC_ADDRESS_GET,
                             &usConfigOpt,
                             &usMacAddressLen,
                             ( uint8_t * ) ucMacAddressVal );

    if( sRetCode < 0 )
    {
        configPRINTF( ( "Failed to get MAC address .\r\n" ) );
        xRetVal = eWiFiFailure;
    }
    else
    {
        memcpy( pucMac, ucMacAddressVal, wificonfigMAX_BSSID_LEN );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetHostIP( char * pxHost,
                                 uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xRetVal = eWiFiSuccess;
    uint32_t ulDestinationIP;
    int16_t sRetCode;

    sRetCode = sl_NetAppDnsGetHostByName( ( signed char * ) pxHost,
                                          strlen( pxHost ),
                                          ( unsigned long * ) &ulDestinationIP,
                                          SL_AF_INET );

    if( sRetCode < 0 )
    {
        xRetVal = eWiFiFailure;
    }
    else
    {
        /*fill the return buffer.*/
        *( pucIPAddr ) = SL_IPV4_BYTE( ulDestinationIP, 3 );
        *( pucIPAddr + 1 ) = SL_IPV4_BYTE( ulDestinationIP, 2 );
        *( pucIPAddr + 2 ) = SL_IPV4_BYTE( ulDestinationIP, 1 );
        *( pucIPAddr + 3 ) = SL_IPV4_BYTE( ulDestinationIP, 0 );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    SlWlanNetworkEntry_t * pxNetEntries;
    uint8_t i;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSemaphoreHandle, xSemaphoreWaitTicks ) == pdTRUE )
    {
        /*Start WiFi scan with interval period and hidden scan enabled.*/
        xRetVal = prvStartScan( wificonfigSCAN_INTERVAL_SEC,
                                wificonfigSCAN_HIDDEN_CHANNEL );

        configASSERT( xRetVal == eWiFiSuccess );

        /*Scan timeout. */
        vTaskDelay( wificonfigSCAN_DURATION_SEC );

        /*Stop WiFi scan. */
        xRetVal = prvStopScan();

        configASSERT( xRetVal == eWiFiSuccess );

        /* TI's compiler has a bug if you use array with variable length on stack, it will malloc without freeing it */
        pxNetEntries = pvPortMalloc( sizeof( SlWlanNetworkEntry_t ) * ucNumNetworks );

        /*Get the scan results. */
        sl_WlanGetNetworkList( 0,
                               ucNumNetworks,
                               &pxNetEntries[ 0 ] );

        for( i = 0 ; i < ucNumNetworks ; i++ )
        {
            strncpy( ( char * ) pxBuffer[ i ].cSSID,
                     ( char * ) pxNetEntries[ i ].Ssid,
                     wificonfigMAX_SSID_LEN );

            strncpy( ( char * ) pxBuffer[ i ].ucBSSID,
                     ( char * ) pxNetEntries[ i ].Bssid,
                     wificonfigMAX_BSSID_LEN );

            pxBuffer[ i ].cChannel = pxNetEntries[ i ].Channel;
            pxBuffer[ i ].cRSSI = pxNetEntries[ i ].Rssi;

            /* security types as supported by simplelink . */
            pxBuffer[ i ].xSecurity = prvConvertSecurityTIToAbstracted( SL_WLAN_SCAN_RESULT_SEC_TYPE_BITMAP( pxNetEntries[ i ].SecurityInfo ) );

            pxBuffer[ i ].ucHidden = SL_WLAN_SCAN_RESULT_HIDDEN_SSID( pxNetEntries[ i ].SecurityInfo );
        }

        vPortFree( pxNetEntries );

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSemaphoreHandle );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}
